		underlying field portrayal is the one it's supposed to draw in.
	Double2D, Double3D, MutableDouble2D, and MutableDouble3D modified so that, for 
		purposes of equals() and hashCode(), 0.0 == -0.0, so elements get hashed to
		the same cell.
	Deleted private function SimState.indexAfterArgumentForKey
	SimState.nameThread() no longer static.
	Added SimState.setSeed() and SimState.setJob()
	SimState.setRandom() deprecated.  Use setSeed() instead.
	Deprecated schedule.time().  Use getTime() instead.
	Made Schedule.scheduleOnce(Key, Steppable) protected
	RandomSequence now synchronizes on the *Schedule*, not the random number generator.
	WeakStep no longer weakly holds its optional Stoppable
	AsynchronousSteppable.stopper() deprecated
	Documentation template examples in AsynchronousSteppable were wrong and have been
		revised (and a new one has been added).
	AsynchronousSteppable is now officially Stoppable
	ParallelSequence.cleaner() added
	DoubleDimension2D eliminated
	Modification to Heap's constructor: numElem no longer used.
	Removed Heap.extractMin(Comparable, Bag), which is confusing and no longer being used.
	Bugfix to FastValueGridPortrayal2D, which was not handling zommed-out grids properly
		when writing to high-quality (like PDF).
	Bugfix to FastHexaValueGridPortrayal2D, which was not setting the color propertly when
		writing to high-quality (like PDF).
	iFloor, iRound, iCeil made private in Utilities.java: they're probably not wise to use.
	Moved Utilities and WordWrap to sim.util.gui
	Added [Mutable]Int2D.manhattanDistance(java.awt.Point)
	Made MutableDouble2D cloneable
	Added Double2D.angle()
	Added a new Bag constructor
	Added a new Properties default factory method.  SimpleInspector now uses it.
	SimpleProperties default constructor modified so that getClass() is not included, to
		be consistent with the default Properties factory method.
	CausedRuntimeException officially deprecated